hh/vdsp/vDSP_util.h

/*  Maps:  The default maps are used.

    These compute:

        for (n = 0; n < N; ++n)
            C[n] = |B[n]| <= |A[n]| ? |A[n]| : |B[n]|;
*/

// Vector sliding window maxima.
extern void vDSP_vswmax(const float *__A, vDSP_Stride __IA, float *__C,
                        vDSP_Stride __IC, vDSP_Length __N,
                        vDSP_Length __WindowLength)
    API_AVAILABLE(macos(10.10), ios(8.0));
extern void vDSP_vswmaxD(const double *__A, vDSP_Stride __IA, double *__C,
                         vDSP_Stride __IC, vDSP_Length __N,
                         vDSP_Length __WindowLength)
    API_AVAILABLE(macos(10.10), ios(8.0));
/*  Maps:  The default maps are used.

    These compute:

        for (n = 0; n < N; ++n)
            C[n] = A[0] + n*B[0];
*/

// Vector running sum integration.
extern void vDSP_vrsum(const float *__A, vDSP_Stride __IA, const float *__S,
                       float *__C, vDSP_Stride __IC, vDSP_Length __N)
    API_AVAILABLE(macos(10.4), ios(4.0));
extern void vDSP_vrsumD(const double *__A, vDSP_Stride __IA, const double *__S,
                        double *__C, vDSP_Stride __IC, vDSP_Length __N)
    API_AVAILABLE(macos(10.4), ios(4.0));
/*  Maps:  The default maps are used.

    These compute:

        for (n = 0; n < N; ++n)
            D[n] = (A[n] - B[n]) * C[0];
*/

// Vector Simpson integration.
extern void vDSP_vsimps(const float *__A, vDSP_Stride __IA, const float *__B,
                        float *__C, vDSP_Stride __IC, vDSP_Length __N)
    API_AVAILABLE(macos(10.4), ios(4.0));
extern void vDSP_vsimpsD(const double *__A, vDSP_Stride __IA, const double *__B,
                         double *__C, vDSP_Stride __IC, vDSP_Length __N)
    API_AVAILABLE(macos(10.4), ios(4.0));
/*  Maps:  The default maps are used.

    These compute:

        for (n = 0; n < N; ++n)
            A[n] is swapped with B[n].
*/

// Vector sliding window sum.
extern void vDSP_vswsum(const float *__A, vDSP_Stride __IA, float *__C,
                        vDSP_Stride __IC, vDSP_Length __N,
                        vDSP_Length __P) // Length of window.
    API_AVAILABLE(macos(10.4), ios(4.0));
extern void vDSP_vswsumD(const double *__A, vDSP_Stride __IA, double *__C,
                         vDSP_Stride __IC, vDSP_Length __N,
                         vDSP_Length __P) // Length of window.
    API_AVAILABLE(macos(10.4), ios(4.0));
/*  Maps:  The default maps are used.

    These compute:

        for (n = 0; n < N; ++n)
            C[n] = A[n] + (B[n] - A[n]) * n/(N-1);
*/

// Vector trapezoidal integration.
extern void vDSP_vtrapz(const float *__A, vDSP_Stride __IA, const float *__B,
                        float *__C, vDSP_Stride __IC, vDSP_Length __N)
    API_AVAILABLE(macos(10.4), ios(4.0));
extern void vDSP_vtrapzD(const double *__A, vDSP_Stride __IA, const double *__B,
                         double *__C, vDSP_Stride __IC, vDSP_Length __N)
    API_AVAILABLE(macos(10.4), ios(4.0));